0.4.4
-----
1. Use SVG icons in settings dialog toolbar.
2. If run under GNOME invoke gsettings to know whether to add min/max to
   titlebar buttons. Currently only "close" (standard GNOME) or
   "min,max/close" (Ubuntu) supported.

0.4.3
-----
1. Fix saving of window size when not using custom titlebar.
2. Add a work-around for restoring maximize state when not using custom
   titlebar.

0.4.2
-----
1. Update skin's titlebar buttons to reflect maximized state.
2. Add GNOME symbolic icon.
3. Add 1 pixel border if using custom titlebar and not maximized.
4. Update dependencies for Ubuntu 24.10
5. Remove quit from menu, as can use window close button.
6. Dont save and restore Qt geometry, seems to cause crash. Instead store size
   and if maximized.

0.4.1
-----
1. Fix typo in desktop file.
2. Add dependencies to deb file.

0.4.0
-----
1. Force 'xcb' platform when running under GNOME.
2. Add '--startmax' commandline switch to force starting maximised.
3. New icon.

0.3.0
-----
1. Update source for Qt6 compatibility.
2. Add option to use custom titlebar.

0.2.2
-----
1. Adjust layout of settings page.
2. Set size policy of push buttons in settings dialog, so that they do not
   become full with certain styles.
3. Improve appearance under GNOME; default to light Adwaita and don't try
   to have settings pages colours reflect theme as does not work.
4. Fix MPRIS interface so that correctly works with GNOME shell.

0.2.1
-----
1. Fix piCorePlayer settings pages being opened in external browser.
2. Don't explicitly disable scrollbars.
3. Fix showing of PDFs.

0.2.0
-----
1. Add debug command line arg. --debug=app,json,cometd
2. Correctly handle opening links in external browser.
3. Refresh status when resuming from suspend.
4. Add support for password protected servers.
5. Set page zoom level when loaded.

0.1.0
-----
1. Increment zoom in 5% steps, min 25% max 500%
2. Update settings instance when change zoom via keyboard.