@@ -4,6 +4,7 @@
 2. If run under GNOME invoke gsettings to know whether to add min/max to
    titlebar buttons. Currently only "close" (standard GNOME) or
    "min,max/close" (Ubuntu) supported.
+3. Tweak appearance of group-boxes if using Fusion style.
 
 0.4.3
 -----
